[package]
name = "a_star_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "a_star_rs"
crate-type = ["cdylib", "rlib"] # rlib necessary for benchmarks with criterion

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_bench"
harness = false

[profile.bench]
debug = true
